--- a/src/components/PostFeaturedImage.astro
+++ b/src/components/PostFeaturedImage.astro
@@ -34,5 +34,6 @@ if (post.FeaturedImage && post.FeaturedImage.Url) {
     display: block;
     max-width: 100%;
     max-height: 20rem;
+    border-radius: 0.5rem;
   }
 </style>
