--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     <title>{siteTitle}</title>
     <meta name="description" content={siteDescription} />
     <link rel="canonical" href={siteURL} />
-    <link rel="icon" href="icon.png" />
+    <link rel="icon" href="/icon.png" />
     <meta property="og:url" content={siteURL} />
     <meta property="og:title" content={siteTitle} />
     <meta property="og:description" content={siteDescription} />
@@ -88,7 +88,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
               <a href={getNavLink('/')} class="icon">
                 <img
                   class="w-[120px] h-[120px] rounded-lg"
-                  src="icon.png"
+                  src="/icon.png"
                   alt="makiartのアイコン画像"
                 />
               </a>
